add tool suite support